@@ -15,10 +15,6 @@ start() {
 	/etc/scripts/config-switch.sh
     fi
 
-    # after switch configure cleaup arp records
-    # this prevent flood/loop with ic+ aplink/downlink switches
-    flush_arp_cache
-
     # bridge preconfigure if not ethernet converter mode
     brisup=`ip -4 -o link show br0 up | grep -c ""` > /dev/null 2>&1
     if [ "$brisup" = "0" ] && [ "$OperationMode" != "2" ]; then
