@@ -17,11 +17,11 @@ start() {
 	    need_start=1
 	fi
 	if [ -f /bin/ftpd ] && [ "$RemoteFTP" != "" ] && [ "$RemoteFTP" != "0" ]; then
-		if [ "$FtpIdleTime" != "" ]; then
-			echo "$FtpPort stream tcp nowait $Login /bin/ftpd ftpd -wS -t $FtpIdleTime $FtpRootDir" >> /etc/inetd.conf
-		else
+	    if [ "$FtpIdleTime" != "" ]; then
+		echo "$FtpPort stream tcp nowait $Login /bin/ftpd ftpd -wS -t $FtpIdleTime $FtpRootDir" >> /etc/inetd.conf
+	    else
 			echo "$FtpPort stream tcp nowait $Login /bin/ftpd ftpd -wS $FtpRootDir" >> /etc/inetd.conf
-		fi
+	    fi
 	    need_start=1
 	fi
 	if [ -f /bin/telnetd ] && [ "$RemoteTelnet" != "" ] && [ "$RemoteTelnet" != "0" ]; then
@@ -36,7 +36,7 @@ start() {
 }
 
 get_param() {
-    eval `nvram_buf_get 2860 Login RemoteSSH RemoteSSHPort  RemoteFTP FtpPort FtpRootDir FtpIdleTime RemoteTelnet`
+    eval `nvram_buf_get 2860 Login RemoteSSH RemoteSSHPort RemoteFTP FtpPort FtpRootDir FtpIdleTime RemoteTelnet`
 }
 
 stop() {
