@@ -32,7 +32,11 @@ start() {
 	    done
 	fi
 	echo "GOAHEAD NOT FOUND!!! FIX THIS AND REBUILD FIRMWARE."
-	exit 1
+    fi
+
+    #backup nvram setting and save rwfs
+    if [ ! -f /etc/backup/nvram_backup.dat ]; then
+	(sleep 60 && fs backup_nvram && fs save) &
     fi
 }
 
