@@ -219,5 +219,3 @@ set_mac_wan_lan
 set_perport_physmode
 set_dhcptouch_portnum
 ##########################################################################
-flush_arp_cache
-##########################################################################
