@@ -326,7 +326,12 @@
 1) init.d/goahead: add vlan support for bridge port TV/SIP/STB modes.<br>
 2) init.d/goahead: add 3WAN/2LAN modes for STB+SIP bridget ports mode.<br>
 3) init.d/goahead: add get mcast from VLAN TV/SIP/STB bridges.<br>
-4) goahead: use mtd_write erase RW-FS instead of direct crash rwfs.<br>
+4) init.d/goahead: move delayed backup from goahead to init.d web script.<br>
+5) init.d/genkeys: remove not need sleep (move to goahead boot complite).<br>
+6) init.d/dnsserv: correct steps generate hosts.<br>
+6) init.d/lanconf: remove not needed swicth clear call.<br>
+7) goahead: use mtd_write erase RW-FS instead of direct crash rwfs.<br>
+
 <br>
 <br>
 <b>TODO:</b><br>
